:zap: google form link voice contribution on about

--- a/src/locales/jowo.json
+++ b/src/locales/jowo.json
@@ -3,7 +3,7 @@
     "long-title": "UFO e Airani Iofifteen! (*ゝω・)ﾉ *kedip* wah iso~",
     "about-title": "Situs e Airani Iofifteen",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/iofi-ufo'>https://github.com/iDevoid/iofi-ufo</a>",
-    "about-description": "Iki proyek pribadi sing digawe karo dikelolah <a target='_blank' href='https://shoma.id'>iDevoid</a> gae Dhukung VTuber (Virtual YouTuber) Indonesia, gae sukses e dee karo liyane. Sopoae isa mbenakno boso karo situs iki.",
+    "about-description": "Iki proyek pribadi sing digawe karo dikelolah <a target='_blank' href='https://shoma.id'>iDevoid</a> gae Dhukung VTuber (Virtual YouTuber) Indonesia, gae sukses e dee karo liyane. Sopoae isa mbenakno boso karo situs iki.<br />kapene kontribusi? <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>kirimen nang kene! (Google form)</a>",
     "voice-button": "Tombol Swara",
     "youtube": "YouTube",
     "twitter": "Twitter",
