:paw_prints: new contributors card on about

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,5 +11,8 @@
   "links": "Hololive Links",
   "about": "About",
   "moona": "Moona Hoshinova's Orbit",
-  "risu": "Ayunda Risu's Icebreaker Peanuts"
+  "risu": "Ayunda Risu's Icebreaker Peanuts",
+  "contributors": "Contributors",
+  "contributions": "Contribution(s)",
+  "voice-clip": "Voice Clip"
 }
