--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,6 +1,6 @@
 {
     "short-title": "UFO!!",
-    "long-title": "UFO-nya Airani Iofifteen! (*ゝω・)ﾉ *kedip* uwah bisa~",
+    "long-title": "UFO-nya Airani Iofifteen! (*ゝω・)ﾉ *kedip* OBISA~",
     "about-title": "Website Airani Iofifteen",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/iofi-ufo'>https://github.com/iDevoid/iofi-ufo</a>",
     "about-description": "Ini adalah proyek pribadi yang dibuat dan dikelola oleh <a target='_blank' href='https://shoma.id'>iDevoid</a> untuk mendukung VTuber (Virtual YouTuber) Indonesia, untuk kesuksesan mereka. Siapapun boleh memperbaiki bahasa dan website ini.<br />Ingin berkontribusi? <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>kirim kesini! (Google form)</a>",
@@ -11,5 +11,8 @@
     "links": "Tautan Hololive",
     "about": "Tentang",
     "moona": "Orbit-nya Moona Hoshinova",
-    "risu": "Kacang Pemecah Es-nya Ayunda Risu"
+    "risu": "Kacang Pemecah Es-nya Ayunda Risu",
+    "contributors": "Kontributor",
+    "contributions": "Kontribusi",
+    "voice-clip": "Klip Suara"
 }
