--- a/src/locales/jowo.json
+++ b/src/locales/jowo.json
@@ -1,6 +1,6 @@
 {
     "short-title": "UFO!!",
-    "long-title": "UFO e Airani Iofifteen! (*ゝω・)ﾉ *kedip* wah iso~",
+    "long-title": "UFO e Airani Iofifteen! (*ゝω・)ﾉ *kedip* o iso~",
     "about-title": "Situs e Airani Iofifteen",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/iofi-ufo'>https://github.com/iDevoid/iofi-ufo</a>",
     "about-description": "Iki proyek pribadi sing digawe karo dikelolah <a target='_blank' href='https://shoma.id'>iDevoid</a> gae Dhukung VTuber (Virtual YouTuber) Indonesia, gae sukses e dee karo liyane. Sopoae isa mbenakno boso karo situs iki.<br />kapene kontribusi? <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>kirimen nang kene! (Google form)</a>",
@@ -11,5 +11,8 @@
     "links": "Sesambungan Hololive",
     "about": "Babagan",
     "moona": "Orbit e Moona Hoshinova",
-    "risu": "Kacang Pemecah Es e Ayunda Risu"
+    "risu": "Kacang Pemecah Es e Ayunda Risu",
+    "contributors": "Kontributor",
+    "contributions": "Kontribusi",
+    "voice-clip": "Klip Swara"
 }
